#1 different password encoder tested